<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/amd_cpu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_amd_cpu"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/intel_cpu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_intel_cpu"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/amd_gpu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_amd_gpu"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/nvidia_gpu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_nvidia_gpu"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" $"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/price_low"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" - $"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/price_high"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search" />

</LinearLayout>
