<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textStartQ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/startQ"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_viewQ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewS"
                android:layout_width="200dp"
                android:textSize="20sp"
                android:padding="10dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttonS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finish" />
        </LinearLayout>

        <TextView
            android:id="@+id/textInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/bought"/>

        <EditText
            android:id="@+id/submitO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:scrollbars="vertical" />

    </LinearLayout>

</ScrollView>
